# neatify

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  build-wasm.ps1  build-wasm.sh  release.ps1  release.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-npm.yml  publish.yml  rust.yml
examples/: format_js.rs
npm/: .neatignore  README.md  package.json  tsconfig.json
npm/src/: cli.ts  core.ts  index.ts  types.ts
src/: lib.rs  wasm.rs
src/core/: error.rs  formatter.rs  mod.rs  parser.rs  tokens.rs
src/formatters/: mod.rs
src/formatters/javascript/: formatter.rs  mod.rs  tokenizer.rs
tests/: javascript_formatter_test.rs
