[package]
name = "neatify"
version = "0.1.2"
edition = "2021"
description = "A code formatter library for multiple languages with a clean API interface"
license = "BSD-3-Clause"
authors = ["Neatify Contributors", "PACM Core Team"]
repository = "https://github.com/pacmjs/neatify"
documentation = "https://docs.rs/neatify"
readme = "README.md"
keywords = ["formatter", "code", "javascript", "formatting", "pretty-print"]
categories = ["development-tools", "command-line-utilities"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
optional = true

[features]
default = []
wasm = ["web-sys"]

[dev-dependencies]
tempfile = "3.3"
